--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
   },
   "dependencies": {
     "@rainbow-me/rainbowkit": "^1.3.3",
+    "axios": "^1.6.5",
     "next": "^14.0.4",
+    "primereact": "^10.3.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "viem": "~1.21.4",
